# LangchainRag_01

./: .env.example  .gitignore  agent.py  app.py  create_dataset.py  evaluate_agent.py  graph.py  ingest.py  ingest_csv.py  langgraph.json  nodes.py  pdf_chunker.py  pdf_parser.py  prompts.py  pyproject.toml  state.py  utils.py
middleware/: logger.py  summarizer.py
sample_data/: carbon_only.csv  messy.csv  mixed.csv  safety_only.csv
tools/: __init__.py  analyze_security_compliance_gap.py  calculate_carbon.py  calculate_demo.py  calculate_employee_kpi.py  calculate_safety.py  compliance_gap_analysis.py  csv_loader.py  employee_kpi_calculate.py  employee_kpi_calculate_revised.py  governance_benchmark.py  report_generator.py  score_ethics_risk.py  search_csv.py  search_esg_regulation.py  search_pdf.py  water_recycling.py  web_search.py
vectorstore/395bb0b0-4448-47be-b7d4-2d02a7f61966/: index_metadata.pickle
