[project]
name = "esg-agent"
version = "1.0.0"
description = "ESG 공시 가이드 에이전트"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.3.0",
    "gradio>=5.0.0",
    "python-dotenv>=1.0.0",
    "langchain-tavily>=0.1.0",
    "langgraph-cli[inmem]>=0.4.21",
]
