[project]
name = "esg-agent"
version = "1.0.0"
description = "ESG Disclosure Guide Agent"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-upstage>=0.3.0",
    "langgraph>=0.2.0",
    "gradio>=5.0.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.0",
    "rank-bm25>=0.2.2",
    "langchain-text-splitters>=0.3.0",
    "langchain-tavily>=0.2.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "opendataloader-pdf>=2.2.1",
    "langchain-opendataloader-pdf>=2.0.0",
    "OpenDartReader>=0.2.1",
    "pandas>=2.2.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "langsmith>=0.1.0",
    "langgraph-cli>=0.1.0",
    "konlpy>=0.6.0",
    "langdetect>=1.0.9",
    "pdf2image>=1.17.0",
    "python-doctr[torch]>=1.0.1",
    "langchain-classic>=1.0.2",
]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
